@@ -2,6 +2,7 @@ QXmpp 0.7.4 (UNRELEASED)
 ------------------------
 
   - Move server statistics to a counter / gauge system.
+  - Add XEP-0249: Direct MUC Invitations attributes to QXmppMessage.
 
 QXmpp 0.7.3 (Sep 7, 2012)
 ------------------------
